new proj/src/objects/GE_ES_Risk_Filter_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Commercial_Finance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Finance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_Filter_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Risk Filter Answers</relationshipLabel>
        <relationshipName>GE_ES_Risk_Filter_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Filter_Question_Text__c</fullName>
        <formula>GE_ES_Risk_Filter_Question__r.GE_ES_Question_Text__c</formula>
        <label>Risk Filter Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Filter_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Filter Question</label>
        <referenceTo>GE_ES_Risk_Filter_Question__c</referenceTo>
        <relationshipLabel>Risk Filter Answers</relationshipLabel>
        <relationshipName>GE_ES_Risk_Filter_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Topics__c</fullName>
        <label>Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Topic 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topic 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topic 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OGGS_RFQustn__c</fullName>
        <label>Risk Filter Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Default_Answer__c</fullName>
        <label>Default Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_HoverText_help_New__c</fullName>
        <label>QuestionHoverText_New</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Oppty_Record_Type__c</fullName>
        <formula>GE_ES_Opportunity__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>GE_ES_Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Tier_1__c</fullName>
        <formula>TEXT( GE_ES_Opportunity__r.GE_HQ_Business_Tier1__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Tier 1</label>
        <type>Text</type>
    </fields>
    <label>Risk Filter Answer</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Answer Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Filter Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>